# LibreVisa

./: .gitignore  Doxyfile  Makefile.am  README.md  autogen.sh  configure.ac  librevisa.pc.in
include/: visa.h  visatype.h
man/: Makefile.am  viClose.3visa  viOpenDefaultRM.3visa  visa.7visa
src/: .gitignore  Makefile.am  base_vprintf.cpp  base_vprintf.h  condvar.h  condvar_pthread.h  condvar_windows.h  event.h  event_queue.cpp  event_queue.h  exception.h  findlist.cpp  findlist.h  instrument_resource.cpp  instrument_resource.h  intrusive_list.h  libvisa.sym  local_session.cpp  local_session.h  lock.h  messagepump.cpp  messagepump.h  messagepump_avahi.cpp  messagepump_avahi.h  mutex.h  mutex_pthread.h  mutex_windows.h  object.cpp  object.h  object_cache.cpp  object_cache.h  resource.cpp  resource.h  resource_creator.h  resource_factory.cpp  resource_factory.h  resource_manager.cpp  resource_manager.h  resource_manager_session.cpp  resource_manager_session.h  (+44 more)
src/usb/: usb.cpp  usb_resource.cpp  usb_resource.h  usb_resource_creator.cpp  usb_resource_creator.h  usb_string.h
src/vxi/: avahi.cpp  avahi.h  vxi.cpp  vxi_resource.cpp  vxi_resource.h  vxi_resource_creator.cpp  vxi_resource_creator.h
tests/: .gitignore  Makefile.am  dummy.h  find.c  lock_attr_exclusive.c  lock_attr_global.c  lock_attr_shared.c  lock_invalid_mode.c  lock_recursive_exclusive.c  lock_recursive_shared.c  open.c  print.c  rule_3_2_3.c  rule_3_3_2.c  rule_3_6_38.c  rule_3_7_3.c  rule_4_2_1.c  rule_4_2_2.c  rule_4_3_11.c  wait_nenabled.c  wait_timeout.c  write.c
tests/io/: .gitignore  Makefile.am  dummy.cpp  dummy.h  open.c  open_multi.c  print.c  read.c  wait_immediate_noevents.c  write.c
